<resources>
    <string name="preference_notification_today" translatable="false">notification_today</string>
    <string name="preference_query_limit" translatable="false">query_limit</string>
    <string name="preference_selected_db_path" translatable="false">select_db_path</string>
    <string name="preference_selected_db" translatable="false">select_db</string>
    <string name="preference_free_call_prefix" translatable="false">free_call_prefix</string>
    <string name="preference_sms_notifications" translatable="false">sms_notifications</string>
    <string name="preference_show_alert" translatable="false">show_notification</string>
    <string name="preference_show_alert_position" translatable="false">show_notification_position</string>
    <string name="preference_missed_call_notification" translatable="false">missed_call_notification</string>
    <string name="preference_alternative_database" translatable="false">alternative_database</string>
    <string name="preference_first_time_open" translatable="false">first_time_open</string>
    <string name="preference_show_permissions_alert" translatable="false">show_permissions_alert</string>
    <string name="preference_ignore_first_idle" translatable="false">ignore_first_idle</string>
    <string name="preference_birthday_notification" translatable="false">birthday_notification</string>
    <string name="preference_silence_birthday_notification" translatable="false">silence_birthday_notification</string>
    <string name="preference_birthday_notification_dialog" translatable="false">birthday_notification_dialog</string>
    <string name="preference_flash_notification" translatable="false">preference_flash_alert_dialog</string>
    <string name="preference_flash_speed" translatable="false">preference_flash_speed</string>
    <string name="preference_flash_speed_on" translatable="false">preference_flash_speed_on</string>
    <string name="preference_flash_speed_off" translatable="false">preference_flash_speed_off</string>
    <string name="preference_corporate" translatable="false">preference_is_corporate</string>
    <string name="reload_number" translatable="false">#### #### #### ####</string>
    <string name="contact_email" translatable="false">\nalvarezosvel@nauta.cu\n</string>
    <string name="contact_email_clean" translatable="false">alvarezosvel@nauta.cu</string>
    <string name="contact_number" translatable="false">+5354260552</string>
    <string name="app_name">KontaK</string>
    <string name="CI">Carnet de identidad</string>
    <string name="action_advanced_search">Búsqueda avanzada</string>
    <string name="action_settings">Configuración</string>
    <string name="actual_pin_code">Código actual</string>
    <string name="add_custom_birthday">Añadir cumpleaños</string>
    <string name="address">Dirección:</string>
    <string name="age">Edad:</string>
    <string name="alternative_database">Base de datos alternativa</string>
    <string name="alternative_database_summary">Seleccionar si no se obtiene ninguna coincidencia en la búsqueda por número de los celulares</string>
    <string name="april">Abr</string>
    <string name="august">Ago</string>
    <string name="birth_date">Fecha de nacimiento:</string>
    <string name="birthday">Cumpleaños</string>
    <string name="birthday_added">Notificación de cumpleaños añadida</string>
    <string name="birthday_coming" formatted="false">El cumpleaños de %s es en %d días</string>
    <string name="notify_birthday">Notificar cumpleaños</string>
    <string name="silence_birthday">Silenciar cumpleaños</string>
    <string name="birthday_notification">Notificación de cumpleaños</string>
    <string name="birthday_notification_dialog_summary">Define cuándo mostrar las notificaciones de cumpleaños</string>
    <string name="birthday_notification_summary">Mostrar notificaciones de cumpleaños</string>
    <string name="silence_birthday_summary">Las notificaciones de cumpleaños solo vibrarán si se selecciona esta opción</string>
    <string name="birthday_today" formatted="false">Hoy es el cumpleaños de %s</string>
    <string name="both">Ambos</string>
    <string name="bottom_position">Abajo</string>
    <string name="call_notification">Notificación de llamadas perdidas</string>
    <string name="call_notification_summary">Define cuándo mostrar las notificaciones de llamadas perdidas</string>
    <string name="camaguey">Camagüey</string>
    <string name="cancel">Cancelar</string>
    <string name="category_database">Base de datos</string>
    <string name="center">Centro</string>
    <string name="change">Cambiar</string>
    <string name="change_pin_code">Cambiar pin</string>
    <string name="ciego">Ciego de Ávila</string>
    <string name="cienfuegos">Cienfuegos</string>
    <string name="confirm_new_pin_code">Confirmar el nuevo pin</string>
    <string name="contact_copyright">\n© 2016 Ing. Osvel Alvarez Jacomino</string>
    <string name="contact_version">"Versión "</string>
    <string name="contains">Contiene1, contiene2…</string>
    <string name="create">Crear</string>
    <string name="credit">Crédito</string>
    <string name="credit_consult">Consultar crédito</string>
    <string name="bag_credit">Consultar bolsa</string>
    <string name="bonus_credit">Consultar bono</string>
    <string name="sms_credit">Consultar SMS</string>
    <string name="voice_credit">Consultar voz</string>
    <string name="custom">Cumpleaños personalizado</string>
    <string name="customize">Personalizar</string>
    <string name="days">Días</string>
    <string name="december">Dic</string>
    <string name="default_prefix">*99 (Predefinido)</string>
    <string name="delete">Eliminar</string>
    <string name="donate">Donar</string>
    <string name="empty_name">Nombre vacío</string>
    <string name="ends_with">Termina con</string>
    <string name="exactly">Exactamente</string>
    <string name="february">Feb</string>
    <string name="file_chooser">Selector de archivos</string>
    <string name="filter">Filtro</string>
    <string name="filter_message">¿Qué desea buscar?</string>
    <string name="five_day">Cinco días antes</string>
    <string name="fix">Fijo</string>
    <string name="free">Gratis</string>
    <string name="entumovil">ENTUMOVIL</string>
    <string name="titular">Titulares</string>
    <string name="free_call">Llamada gratis</string>
    <string name="free_call_summary">Selecciona un prefijo para llamada gratis en dependencia de su teléfono</string>
    <string name="getting">Obteniendo…</string>
    <string name="granma">Granma</string>
    <string name="guantanamo">Guantánamo</string>
    <string name="habana">Habana</string>
    <string name="holguin">Holguín</string>
    <string name="identification_filter">Filtro de carnet</string>
    <string name="ignore">Ignorar</string>
    <string name="incoming_call">Llamada entrante</string>
    <string name="corporate">Línea corporativa</string>
    <string name="corporate_summary">Seleccione si su línea pertenece a una empresa</string>
    <string name="sim_type">Tipo de línea</string>
    <string name="increase">Recargar</string>
    <string name="invalid_code">Código inválido</string>
    <string name="invalid_folder">Carpeta inválida</string>
    <string name="invalid_new_pin">Nuevo código inválido</string>
    <string name="invalid_number">Número inválido</string>
    <string name="invalid_pin">Pin inválido</string>
    <string name="isla">Isla de la Juventud</string>
    <string name="january">Ene</string>
    <string name="july">Jul</string>
    <string name="june">Jun</string>
    <string name="large_text">"\n\n"
        "Kontak ofrece mayor comodidad en las operaciones de consulta,"
        "recarga y transferencia de saldo, sintetizando pasos en el"
        "acceso a las transferencias de saldo, las llamadas gratuitas y las privadas."
        "Integra un set de facilidades e interesantes opciones que"
        "permiten un acceso sencillo a informaciones importantes en"
        "su teléfono móvil.\n"
        "Con esta aplicación usted puede obtener notificaciones de los cumpleaños "
        "de sus amigos y saber quién le llama, o si la llamada entrante es gratis o no, aun cuando"
        "no conoce el número.\n\n"
        "NOTA DEL AUTOR\n\n"
        "Si Kontak le ha sido de ayuda y cree que debería cambiar algo"
        "o agregarle nuevas funcionalidades, no dude en enviar sus"
        "sugerencias al correo de contacto.\n\n"
        "Si de veras está satisfecho con el trabajo realizado y desea"
        "contribuir al desarrollo de nuevas aplicaciones como esta, puede"
        "hacerlo transfiriendo saldo al autor con solo presionar la cajita"
        "de regalo que se muestra encima. Su aporte de $0.01 también ayuda,"
        "y si es de más, aún mejor.\n\n"
        "Si desea contratar los servicios de desarrollo para su empresa o"
        "negocio particular, esperamos por usted.\n"
        "Muchas gracias.\n\n"
    </string>
    <string name="loading">Cargando…</string>
    <string name="march">Mar</string>
    <string name="matanzas">Matanzas</string>
    <string name="may">May</string>
    <string name="mayabeque_artemisa">Mayabeque / Artemisa</string>
    <string name="mayabeque">Mayabeque</string>
    <string name="artemisa">Artemisa</string>
    <string name="missed_call" formatted="false">Llamada perdida de %s</string>
    <string name="database_found" formatted="false">Base de datos encontrada en %s</string>
    <string name="database_path">/sdcard/KontaK/etecsa.db</string>
    <string name="database_not_found" formatted="false">Base de datos no encontrada</string>
    <string name="missed_call_manny" formatted="false">%d llamadas perdidas de %s</string>
    <string name="mobile">Móvil</string>
    <string name="mode_one_prefix">*+99 (Modo 1)</string>
    <string name="mode_two_prefix">+539953 (Modo 2)</string>
    <string name="months">Meses</string>
    <string name="name">Nombre</string>
    <string name="new_pin_code">Nuevo pin</string>
    <string name="notifications">Notificaciones</string>
    <string name="pin_code">Código pin</string>
    <string name="select_database">Seleccionar base de datos</string>
    <string name="define_path">Dirección de la base de datos</string>
    <string name="define_path_summary">Escriba de forma manual la dirección de su base de datos en el dispositivo</string>
    <string name="query_limit">Cantidad de resultados</string>
    <string name="show_alert">Mostrar alerta</string>
    <string name="show_alert_position">Posición de la alerta</string>
    <string name="show_alert_position_summary">Cambia la posición del diálogo de alerta</string>
    <string name="show_alert_summary">Define cuándo mostrar el diálogo de alerta en las llamadas entrantes</string>
    <string name="sms_notifications">Notificación de sms</string>
    <string name="sms_notifications_summary">Define cuándo mostrar la notificación de mensaje entrante</string>
    <string name="start_with">Comienza con</string>
    <string name="summary_select_database">Seleccionar una nueva base de datos para buscar los números</string>
    <string name="summary_query">Cantidad de resultados que se muestran en la busqueda</string>
    <string name="transfer">Transferir</string>
    <string name="amount">Monto</string>
    <string name="flash_alerts">Alertas por flash</string>
    <string name="summary_flash_alerts">Define cuando mostrar las alertas mediante el flash de la cámara</string>
    <string name="flash_alerts_time">Tiempo del flash</string>
    <string name="summary_flash_alerts_time">Define cuan rápido se enciende o apaga el flash de la cámara</string>
    <string name="activate">Activar plan</string>
    <string name="deactivate">Desactivar plan</string>
    <string name="add_number">Adicionar número</string>
    <string name="remove_number">Eliminar número</string>
    <string name="list">Amigos</string>
    <string name="num_count">Cambios realizados</string>
</resources>