<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/activate_plan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="50"
                    android:background="@drawable/rounded_corner_button_red"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_big_button">

                    <ImageView
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:layout_gravity="end|top"
                        android:src="@drawable/friend_activate"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_text_space"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/activate"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textBigSize" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/deactivate_plan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/rounded_corner_button_blue"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_big_button">

                    <ImageView
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:layout_gravity="end|top"
                        android:src="@drawable/friend_cancel"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_text_space"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/deactivate"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textBigSize" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_corner_button_red"
                android:orientation="vertical"
                android:padding="@dimen/padding_big_button">

                <ImageView
                    android:layout_width="@dimen/button_icon_size"
                    android:layout_height="@dimen/button_icon_size"
                    android:layout_gravity="end|top"
                    android:src="@drawable/friend_add"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/icon_text_space"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/add_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textBigSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/remove_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_corner_button_blue"
                android:orientation="vertical"
                android:padding="@dimen/padding_big_button">

                <ImageView
                    android:layout_width="@dimen/button_icon_size"
                    android:layout_height="@dimen/button_icon_size"
                    android:layout_gravity="end|top"
                    android:src="@drawable/friend_remove"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/icon_text_space"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/remove_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textBigSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:background="@drawable/rounded_corner_button_green"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_big_button">

                    <ImageView
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:layout_gravity="end|top"
                        android:src="@drawable/friend_list"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_text_space"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/list"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textBigSize" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/change_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:background="@drawable/rounded_corner_button_green"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_big_button">

                    <ImageView
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:layout_gravity="end|top"
                        android:src="@drawable/friend_count"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_text_space"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/num_count"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textBigSize" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>